# aria-engine

./: .gitignore  AGENTS.md  CLAUDE.md  NuGet.Config  README.md  engine.slnx
.github/: pull_request_template.md
.github/workflows/: aria-cicd.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: doc-refresh.md
.sisyphus/plans/: aria-v3-roadmap.md  doc-refresh.md  v1.0.0-cleanup.md
NScripterConverter/: Program.cs
docs/: README.md
docs/ai-agent/: AGENTS.md  CODEBASE.md
docs/api/: opcodes.md
docs/architecture/: language-philosophy.md  overview.md  parser.md  rendering.md  vm.md
docs/development/: git-github.md
docs/how-to-guides/: compile-and-package.md  custom-fonts.md  debug-mode.md  troubleshooting.md
docs/reference/: config.md  init-aria.md  syntax.md
docs/release/: compatibility-v1.0.0.md  crash-diagnostics.md  installer.md  production-checklist.md  qa-matrix.md  qa-v1.0.0-rc.2.md  release-governance.md  release-notes-template.md  release-notes-v1.0.0-rc.2.md  replay-regression.md  save-migration.md  visual-regression.md
docs/scripting/: advanced.md  animations.md  aria-features.md  background-time-filter.md  basics.md  control-flow.md  core-spec.md  effects-ux.md  sprites.md  ui-elements.md
docs/tutorials/: chapter-system.md  save-load.md  (+2 more)
saves/: persistent.ariasav
scripts/: cicd.ps1  diagnostics.ps1  doctor.ps1  git-report.ps1  installer.ps1  package.ps1  patch.ps1  release.ps1  replay.ps1  sign.ps1  smoke.ps1  update-installer.ps1  visual-compare.ps1  visual-regression.ps1
src/aria-installer/: Cargo.toml
src/aria-installer/src/: main.rs
(+182 files in other folders)
