[package]
name = "aria-installer"
version = "1.0.0"
edition = "2021"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
walkdir = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
